# ClanManager

./: .gitignore  CMakeLists.txt  CONSTRUCTOR_FIX_INSTRUCTIONS.cpp  FIX_ANLEITUNG.md  LICENSE  NULL_CHECKS_FIX.cpp  README.md  build_and_strip.sh  sbom_scan.sh
.github/workflows/: build-all-platforms.yml
ClanManagerNew/: CMakeLists.txt  README.md  sample_players.csv
ClanManagerNew/include/: EditPlayerDialog.h  MainWindow.h  Player.h  PlayerList.h
ClanManagerNew/src/: EditPlayerDialog.cpp  MainWindow.cpp  Player.cpp  PlayerList.cpp  main.cpp
distribution/: README.md  README_Windows.txt  demo_players.csv  install.sh  package.sh  package_windows.bat
distribution/resources/: sample_players.csv
include/: LineupDialog.h  LineupExporter.h  MainWindow.h  Player.h  PlayerList.h  Training.h
src/: LineupDialog.cpp  LineupExporter.cpp  MainWindow.cpp  Player.cpp  PlayerList.cpp  main.cpp  main.cpp.FIXED  main_debug.cpp  main_fixed.cpp  main_minimal_test.cpp  main_test.cpp
tests/: imported_players.csv  imported_players.xlsx  results.json  results_detailed.json  test_counter.cpp  test_grouping.cpp  test_import.cpp  test_logging.cpp  test_rules.py
tools/: backup_clanmanager.sh
